Final presentation code.

--- a/css/reveal.css
+++ b/css/reveal.css
@@ -1563,7 +1563,7 @@ body {
 .reveal.rtl .slides h5,
 .reveal.rtl .slides h6 {
 	direction: rtl;
-	font-family: sans-serif;
+	font-family: "Quattrocento Sans";
 }
 
 .reveal.rtl pre,
