--- a/css/theme/default.css
+++ b/css/theme/default.css
@@ -5,9 +5,11 @@
  * Copyright (C) 2011-2012 Hakim El Hattab, http://hakim.se
  */
 @font-face {
-  font-family: 'League Gothic';
+  font-family: "Quattrocento Sans";
+  /*
   src: url("../../lib/font/league_gothic-webfont.eot");
   src: url("../../lib/font/league_gothic-webfont.eot?#iefix") format("embedded-opentype"), url("../../lib/font/league_gothic-webfont.woff") format("woff"), url("../../lib/font/league_gothic-webfont.ttf") format("truetype"), url("../../lib/font/league_gothic-webfont.svg#LeagueGothicRegular") format("svg");
+  */
   font-weight: normal;
   font-style: normal; }
 
@@ -25,8 +27,8 @@ body {
   background-color: #2b2b2b; }
 
 .reveal {
-  font-family: "Lato", sans-serif;
-  font-size: 36px;
+  font-family: "Quattrocento Sans", "Lato", sans-serif;
+  font-size: 32px;
   font-weight: normal;
   letter-spacing: -0.02em;
   color: #eeeeee; }
@@ -47,7 +49,7 @@ body {
 .reveal h6 {
   margin: 0 0 20px 0;
   color: #eeeeee;
-  font-family: "League Gothic", Impact, sans-serif;
+  font-family: "Quattrocento Sans", "League Gothic", Impact, sans-serif;
   line-height: 0.9em;
   letter-spacing: 0.02em;
   text-transform: uppercase;
